# revive

./: .gitignore  ARCHITECTURE.md  DESCRIPTION.md  PROTOCOL.md  README.md  project.yml  setup.sh
LLM/: README.md  requirements.txt
LLM/common/: device_tiers.yaml  gguf_io.py  role_registry.py
LLM/data/: build_calibration.py  distill_from_qwen4b.py  generate_expanded_dataset.py  merge_datasets.py
LLM/eval/: eval_role.py  eval_tier.py
LLM/export/: export_single.sh  export_tier_matrix.py  manifest.py
LLM/prune/: heal_lora.py  layer_prune.py  prune_profiles.yaml
LLM/quantize/: imatrix_gen.py  quantize_tiers.py
LLM/scripts/: aws_launch.sh  aws_pull.sh  aws_user_data.sh  bootstrap.sh  compress_all.sh  quick_test.sh
LLM/sm/: launch.py  requirements.txt  train_entry.py
LLM/train/: train_all.sh  train_qwen_role.py
android/: advertise.py  settings.gradle.kts  setup.sh
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
dashboard/: index.html  server.py
llamacpp-stages/tests/: probe_embd.py
macos/: revive-cli.py  setup.sh
revive/: Info.plist  reviveApp.swift
revive.xcodeproj/: project.pbxproj
revive/Coordinator/: Aggregator.swift  CoordinatorView.swift  CoordinatorWebServer.swift  QueryRouter.swift  SwarmManager.swift
rpi/: aggregator.py  discovery.py  metrics.py  requirements.txt  setup.sh  worker.py
training/: generate_dataset.py  generate_role_dataset.py  train.py  train_all.sh  train_role.py
true-distribution/: .gitignore  README.md
writeup/: revive_interp.aux  revive_interp.out  revive_interp.tex
(+63 files in other folders)
